# ai-unit-test-assistant

./: .env.example  .gitignore  README.md  ai-test-assistant.yml  pyproject.toml
.github/workflows/: ai-test-assistant.yml  ci.yml
ai_test_assistant/: __init__.py  cli.py  config.py  git_utils.py  llm_client.py  models.py  pipeline.py  prompts.py  pytest_runner.py  report.py  source_analyzer.py  test_finder.py  test_generator.py
docs/: ai_productivity_summary.md  integration_guide.md  llm_basics.md
examples/: calculator.py  user_service.py
tests/unit/: test_apply_suggestions.py  test_git_utils.py  test_pytest_runner.py  test_response_parser.py  test_source_analyzer.py  test_test_finder.py
